# harness

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  agentic-pipeline-spec.md  arch-review.r1.md  brief.md  design.r1.md  index.html  pyproject.toml  spec.r1.md  task-plan.r1.md
.agents/: analyst.md  architect.md  brainstorm.md  designer.md  developer.md  planner.md  product.md  reviewer.md
.pipeline/: config.json
agentharness/: __init__.py  agent_runner.py  auto_mode.py  azure_artifacts.py  azure_queue.py  brainstorm.py  checkpoint.py  cli.py  config.py  context_files.py  dispatcher.py  github_artifacts.py  github_client.py  github_labels.py  github_queue.py  github_state.py  models.py  observer.py  prompt_builder.py  run_task.py  state_change.py  state_manager.py  storage.py  storage_protocol.py  tui.py  tui_state_change.py  worker.py
agentharness-landing/: README.md  index.html
docs/: anela-heblo-symlink-handoff.md
landingpage/: index.html  main.js  styles.css
scripts/: reset_feature.py
site/: index.html
tests/: test_agent_runner_build_command.py  test_agent_runner_parse.py  test_auto_mode.py  test_backend_parity.py  test_brainstorm_epic.py  test_brainstorm_github.py  test_brainstorm_pipeline_config.py  test_brainstorm_simple.py  test_checkpoint.py  test_checkpoint_cli.py  test_cli_convert.py  test_cli_epic_gating.py  test_cli_init.py  test_cli_new.py  test_code_reviewer_agent.py  test_config.py  test_config_new.py  test_dispatcher.py  test_dispatcher_github.py  test_dispatcher_worktree.py  test_ensure_pr_linked.py  test_epic_dispatch.py  test_github_artifacts.py  test_github_client.py  test_github_client_retry.py  test_github_labels.py  test_github_queue.py  test_github_state.py  test_models.py  test_observer_auto_mode.py  test_observer_concurrency.py  test_observer_epic.py  test_observer_sweeper.py  test_packaged_skills.py  test_pipeline_review_wiring.py  test_prompt_builder.py  test_run_task.py  (+8 more)
(+119 files in other folders)
