[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentharness"
version = "0.9.0"
description = "Distributed agentic development pipeline powered by Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ondra@anela.cz" }]
keywords = ["claude", "agents", "pipeline", "automation", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "azure-storage-blob>=12.19.0",
    "azure-storage-queue>=12.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "textual>=0.60.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "httpx[http2]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/pajgrtondrej/AgentHarness"
Repository = "https://github.com/pajgrtondrej/AgentHarness"
Issues = "https://github.com/pajgrtondrej/AgentHarness/issues"

[project.scripts]
agentharness = "agentharness.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
]















[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agentharness"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
tag_format = "v{version}"
commit_message = "chore: release {version} [skip ci]"
build_command = "pip install hatch && hatch build"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

